# solver-benchmarks

./: CONTRIBUTING.md  README.md  pyproject.toml
results/: 20260221_michael_howes_darwin.jsonl  20260226_timphip_windows.jsonl
scripts/: run_benchmarks.py  summarize.py
src/solver_benchmarks/: analysis.py  classify.py  results.py  runner.py
src/solver_benchmarks/data/: bikeshare.py
src/solver_benchmarks/problems/: __init__.py  ecp.py  finance_NCM.py  finance_ncm.py  lp.py  mip.py  qp.py  sdp.py  socp.py
tests/: test_problems.py  test_results.py
