[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solver-benchmarks"
version = "0.1.0"
description = "Benchmark suite for CVXPY solvers"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.4",
    "numpy>=1.24",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
analysis = ["pandas", "matplotlib"]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/solver_benchmarks"]
